ajustes para o deploy

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://contato:RqxcSUplar4eLb5Q@cluster0.qglbl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://contato:RqxcSUplar4eLb5Q@cluster0.qglbl.mongodb.net/api?retryWrites=true&w=majority
+
 JWT_SECRET=SecretKey
